--- a/Proyecto_SITE/Proyecto_SITE.csproj
+++ b/Proyecto_SITE/Proyecto_SITE.csproj
@@ -67,16 +67,58 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CSS\Mod_Usuario.css" />
     <Content Include="CSS\Principal_CSS.css" />
     <Content Include="Resources\90p.png" />
     <Content Include="Resources\img1.jpg" />
+    <Content Include="Resources\nodisponible_simple.PNG" />
     <Content Include="Resources\security_icon.png" />
     <Content Include="Resources\terminos-y-condiciones-img.png" />
     <Content Include="Web.config" />
+    <Content Include="WebForms\Mod_Usuario.aspx" />
+    <Content Include="WebForms\Reg_Usuario.aspx" />
+    <Content Include="WebForms\wfrm_Cat_Conciertos.aspx" />
+    <Content Include="WebForms\wfrm_Cat_Deportes.aspx" />
+    <Content Include="WebForms\wfrm_Cat_Teatro.aspx" />
     <Content Include="WebForms\wfrm_Principal.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebForms\Mod_Usuario.aspx.cs">
+      <DependentUpon>Mod_Usuario.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForms\Mod_Usuario.aspx.designer.cs">
+      <DependentUpon>Mod_Usuario.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForms\Reg_Usuario.aspx.cs">
+      <DependentUpon>Reg_Usuario.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForms\Reg_Usuario.aspx.designer.cs">
+      <DependentUpon>Reg_Usuario.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForms\wfrm_Cat_Conciertos.aspx.cs">
+      <DependentUpon>wfrm_Cat_Conciertos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForms\wfrm_Cat_Conciertos.aspx.designer.cs">
+      <DependentUpon>wfrm_Cat_Conciertos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForms\wfrm_Cat_Deportes.aspx.cs">
+      <DependentUpon>wfrm_Cat_Deportes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForms\wfrm_Cat_Deportes.aspx.designer.cs">
+      <DependentUpon>wfrm_Cat_Deportes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForms\wfrm_Cat_Teatro.aspx.cs">
+      <DependentUpon>wfrm_Cat_Teatro.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForms\wfrm_Cat_Teatro.aspx.designer.cs">
+      <DependentUpon>wfrm_Cat_Teatro.aspx</DependentUpon>
+    </Compile>
     <Compile Include="WebForms\wfrm_Principal.aspx.cs">
       <DependentUpon>wfrm_Principal.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
