--- a/Proyecto_SITE/bin/Proyecto_SITE.dll.config
+++ b/Proyecto_SITE/bin/Proyecto_SITE.dll.config
@@ -20,4 +20,16 @@
     </compilers>
   </system.codedom>
 
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IBD" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:60194/BD.svc" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_IBD" contract="Service.IBD"
+        name="BasicHttpBinding_IBD" />
+    </client>
+  </system.serviceModel>
 </configuration>
